--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,12 +1,8 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
+
 @import url('./reset.css');
-/* @import url('./1-gallery.css'); */
-@import url('./2-form.css');
+@import url('./1-timer.css');
+@import url('./2-snackbar.css');
+
 
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
@@ -29,12 +25,63 @@
 }
 
 body {
-  margin: 16px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: #fafafa;
-  color: #212121;
-  line-height: 1.5;
+  box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
+  background: #fafafa;
+  color: #2e2f42;
+  margin: 0 auto;
+  padding: 0;
 }
+
+
+.container {
+  max-width: 375px;
+   margin: 0 auto;
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    min-width: 768px;
+    margin: 0 auto;
+  }
+
+  }
+
+@media screen and (min-width: 1200px) {
+  .container {
+    min-width: 1200px;
+    margin: 0 auto;
+  }
+
+}
+
+.header {
+ 
+  font-weight: 500;
+    font-size: 20px;
+    line-height: 1.5;
+    background-color:#f5f5f5;
+    height: 50px;
+    margin: 0 auto;
+    padding: 0;
+}
+
+
+nav ul{
+  padding-top: 10px;
+  display: flex;
+  flex-direction: row;
+  gap: 44px;
+  justify-content: center;
+  align-items: center;
+  transform: translate(2500ms);
+}
+
+.nav-link :focus, .nav-link :hover{
+  color: #4e75ff;
+  ;
+}
+
+
+
+
