--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,7 +1,6 @@
 
 @import url('./reset.css');
-@import url('./1-timer.css');
-@import url('./2-snackbar.css');
+@import url('./render.css');
 
 
 :root {
