--- a/src/css/render.css
+++ b/src/css/render.css
@@ -1,7 +1,9 @@
-@import 'izitoast/dist/css/iziToast.min.css';
-@import 'simplelightbox/dist/simple-lightbox.min.css';
 
-.search-form {
+@import url('./reset.css');
+@import 'simplelightbox/dist/simple-lightbox.min.css';
+@import 'izitoast/dist/css/iziToast.min.css';
+
+.form-hw-12 {
   display: flex;
   /* align-items: flex-start; */
   justify-content: center;
@@ -10,7 +12,7 @@
   padding-top: 36px;
 }
 
-.search-input {
+.input-hw-12 {
   border: 1px solid #808080;
   border-radius: 4px;
   width: 272px;
@@ -23,16 +25,18 @@
   color: #2e2f42;
   outline: none;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  box-sizing: border-box;
 }
-.search-input:hover {
+
+.search-input-12:hover {
   border: 1px solid #000000;
 }
 
-.search-input:focus {
+.search-input-12:focus {
   border: 1px solid #4e75ff;
 }
 
-.search-input::placeholder {
+.search-input-12::placeholder {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
@@ -40,7 +44,8 @@
   color: #808080;
 }
 
-.search-btn {
+.button-hw-12,
+.button-load-more-hw-12 {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -48,7 +53,6 @@
   border: 1px solid #4e75ff;
   border-radius: 8px;
   padding: 8px 16px;
-  width: 91px;
   height: 40px;
   background: #4e75ff;
   font-weight: 500;
@@ -59,40 +63,44 @@
   outline: none;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.search-btn:hover {
+
+.button-hw-12 {
+  width: 91px;
+}
+
+.button-hw-12:hover {
   background: #6c8cff;
 }
 
-.gallery {
+.gallery-hw-12 {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
   gap: 20px;
   margin: 32px auto;
- 
 }
 
-.gallery-img {
+.gallery-img-hw-12 {
   width: 360px;
   height: 200px;
   object-fit: cover;
 }
 
-.gallery-card{
+.gallery-card-hw-12 {
   border: 1px solid #808080;
 }
 
-.image-info {
+.image-info-hw-12 {
   display: flex;
   flex-direction: row;
   gap: 28px;
   margin: 4px auto;
   justify-content: center;
-    align-items: center;
-    
+  align-items: center;
 }
-.image-info p {
+
+.image-info-hw-12 p {
   display: flex;
   flex-direction: column;
   font-weight: 600;
@@ -101,9 +109,10 @@
   letter-spacing: 0.04em;
   color: #2e2f42;
   justify-content: center;
-    align-items: center;
+  align-items: center;
 }
-.image-info span {
+
+.image-info-hw-12 span {
   font-weight: 400;
   font-size: 12px;
   line-height: 2;
@@ -111,14 +120,24 @@
   color: #2e2f42;
 }
 
+.button-load-more-hw-12 {
+  width: 125px;
+  margin: 0 auto 24px;
+}
 
+.button-load-more-hw-12:hover {
+  background: #6c8cff;
+}
 
+.button-load-more-hw-12.is-hidden {
+  display: none;
+}
 
-.loader {
+.loader-hw-12 {
   display: block;
   color: #4e75ff;
   margin-left: auto;
-    margin-right: auto;
+  margin-right: auto;
   font-size: 10px;
   width: 1em;
   height: 1em;
@@ -129,7 +148,7 @@
   transform: translateZ(0);
 }
 
-.loader.is-hidden {
+.loader-hw-12.is-hidden {
   display: none;
 }
 
@@ -137,55 +156,42 @@
 
   0%,
   100% {
-    box-shadow: 0 -3em 0 0.2em,
-      2em -2em 0 0em, 3em 0 0 -1em,
-      2em 2em 0 -1em, 0 3em 0 -1em,
-      -2em 2em 0 -1em, -3em 0 0 -1em,
-      -2em -2em 0 0;
+    box-shadow: 0 -3em 0 0.2em, 2em -2em 0 0em, 3em 0 0 -1em, 2em 2em 0 -1em,
+      0 3em 0 -1em, -2em 2em 0 -1em, -3em 0 0 -1em, -2em -2em 0 0;
   }
 
   12.5% {
-    box-shadow: 0 -3em 0 0, 2em -2em 0 0.2em,
-      3em 0 0 0, 2em 2em 0 -1em, 0 3em 0 -1em,
-      -2em 2em 0 -1em, -3em 0 0 -1em,
-      -2em -2em 0 -1em;
+    box-shadow: 0 -3em 0 0, 2em -2em 0 0.2em, 3em 0 0 0, 2em 2em 0 -1em,
+      0 3em 0 -1em, -2em 2em 0 -1em, -3em 0 0 -1em, -2em -2em 0 -1em;
   }
 
   25% {
-    box-shadow: 0 -3em 0 -0.5em,
-      2em -2em 0 0, 3em 0 0 0.2em,
-      2em 2em 0 0, 0 3em 0 -1em,
-      -2em 2em 0 -1em, -3em 0 0 -1em,
-      -2em -2em 0 -1em;
+    box-shadow: 0 -3em 0 -0.5em, 2em -2em 0 0, 3em 0 0 0.2em, 2em 2em 0 0,
+      0 3em 0 -1em, -2em 2em 0 -1em, -3em 0 0 -1em, -2em -2em 0 -1em;
   }
 
   37.5% {
-    box-shadow: 0 -3em 0 -1em, 2em -2em 0 -1em,
-      3em 0em 0 0, 2em 2em 0 0.2em, 0 3em 0 0em,
-      -2em 2em 0 -1em, -3em 0em 0 -1em, -2em -2em 0 -1em;
+    box-shadow: 0 -3em 0 -1em, 2em -2em 0 -1em, 3em 0em 0 0, 2em 2em 0 0.2em,
+      0 3em 0 0em, -2em 2em 0 -1em, -3em 0em 0 -1em, -2em -2em 0 -1em;
   }
 
   50% {
-    box-shadow: 0 -3em 0 -1em, 2em -2em 0 -1em,
-      3em 0 0 -1em, 2em 2em 0 0em, 0 3em 0 0.2em,
-      -2em 2em 0 0, -3em 0em 0 -1em, -2em -2em 0 -1em;
+    box-shadow: 0 -3em 0 -1em, 2em -2em 0 -1em, 3em 0 0 -1em, 2em 2em 0 0em,
+      0 3em 0 0.2em, -2em 2em 0 0, -3em 0em 0 -1em, -2em -2em 0 -1em;
   }
 
   62.5% {
-    box-shadow: 0 -3em 0 -1em, 2em -2em 0 -1em,
-      3em 0 0 -1em, 2em 2em 0 -1em, 0 3em 0 0,
-      -2em 2em 0 0.2em, -3em 0 0 0, -2em -2em 0 -1em;
+    box-shadow: 0 -3em 0 -1em, 2em -2em 0 -1em, 3em 0 0 -1em, 2em 2em 0 -1em,
+      0 3em 0 0, -2em 2em 0 0.2em, -3em 0 0 0, -2em -2em 0 -1em;
   }
 
   75% {
-    box-shadow: 0em -3em 0 -1em, 2em -2em 0 -1em,
-      3em 0em 0 -1em, 2em 2em 0 -1em, 0 3em 0 -1em,
-      -2em 2em 0 0, -3em 0em 0 0.2em, -2em -2em 0 0;
+    box-shadow: 0em -3em 0 -1em, 2em -2em 0 -1em, 3em 0em 0 -1em, 2em 2em 0 -1em,
+      0 3em 0 -1em, -2em 2em 0 0, -3em 0em 0 0.2em, -2em -2em 0 0;
   }
 
   87.5% {
-    box-shadow: 0em -3em 0 0, 2em -2em 0 -1em,
-      3em 0 0 -1em, 2em 2em 0 -1em, 0 3em 0 -1em,
-      -2em 2em 0 0, -3em 0em 0 0, -2em -2em 0 0.2em;
+    box-shadow: 0em -3em 0 0, 2em -2em 0 -1em, 3em 0 0 -1em, 2em 2em 0 -1em,
+      0 3em 0 -1em, -2em 2em 0 0, -3em 0em 0 0, -2em -2em 0 0.2em;
   }
 }
